# CodingGuru

./: README.md  pyproject.toml
data/: download_data.py  get_data.py
src/: _main.py  data_preprocessing.py  main.py  model_training.py  model_validation
tests/: check_downloaded_files  check_downloaded_files.py
