[tool.poetry]
name = "project-becoming-code-guru"
version = "0.1.0"
description = "Python project voor zelfontwikkeling en testen van bepaalde code"
authors = ["Danish Raouf <danishraouf@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.2.0"
requests = "^2.32.3"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
scipy = "^1.14.1"
scikit-learn = "^1.6.0"
statsmodels = "^0.14.4"
pyarrow = "^18.1.0"
dask = "^2024.12.0"
sqlalchemy = "^2.0.36"
pyspark = "^3.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
